Fix iframe spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -239,6 +239,10 @@ ul.social-media-list {
     font-size: $base-font-size * 10;
 }
 
+table {
+    border-spacing: 0;
+}
+
 td {
     vertical-align: top;
 }
